@@ -1,3 +1,4 @@
+#include <stdlib.h>
 #include "H5A.h"
 
 /*################################*/
@@ -195,35 +196,42 @@ SEXP H5Aread_helper_STRING(hid_t attr_id, hsize_t n, SEXP Rdim, SEXP _buf, hid_t
 
   SEXP Rval;
   size_t size = H5Tget_size(dtype_id);
+  /* if (cpdType < 0) { */
+    mem_type_id = dtype_id;
+  /* } else { */
+  /*   mem_type_id = H5Tcreate(H5T_COMPOUND, size); */
+  /*   herr_t status = H5Tinsert(mem_type_id, cpdField[0], 0, dtype_id); */
+  /*   for (int i=1; i<cpdNField; i++) { */
+  /* 	hid_t mem_type_id2 = H5Tcreate(H5T_COMPOUND, size); */
+  /* 	herr_t status = H5Tinsert(mem_type_id2, cpdField[i], 0, mem_type_id); */
+  /* 	mem_type_id = mem_type_id2; */
+  /*   } */
+  /* } */
+  Rval = PROTECT(allocVector(STRSXP, n));
   if (H5Tis_variable_str(dtype_id)) {
-    printf("Warning: h5read for variable length strings not yet implemented. Replacing strings by NA's\n");
-    double na = R_NaReal;
-    Rval = PROTECT(allocVector(REALSXP, n));
-    for (int i=0; i<n; i++) { REAL(Rval)[i] = na; }
-    setAttrib(Rval, R_DimSymbol, Rdim);
-    UNPROTECT(1);
-    /* Rval = R_NilValue; */
-  } else {
-    /* if (cpdType < 0) { */
-      mem_type_id = dtype_id;
-    /* } else { */
-    /*   mem_type_id = H5Tcreate(H5T_COMPOUND, size); */
-    /*   herr_t status = H5Tinsert(mem_type_id, cpdField[0], 0, dtype_id); */
-    /*   for (int i=1; i<cpdNField; i++) { */
-    /* 	hid_t mem_type_id2 = H5Tcreate(H5T_COMPOUND, size); */
-    /* 	herr_t status = H5Tinsert(mem_type_id2, cpdField[i], 0, mem_type_id); */
-    /* 	mem_type_id = mem_type_id2; */
-    /*   } */
-    /* } */
-    char bufSTR[n][size];
+    char *bufSTR[n];
     herr_t herr = H5Aread(attr_id, mem_type_id, bufSTR );
-    Rval = PROTECT(allocVector(STRSXP, n));
     for (int i=0; i<n; i++) {
       SET_STRING_ELT(Rval, i, mkChar(bufSTR[i]));
+      free(bufSTR[i]);
     }
-    setAttrib(Rval, R_DimSymbol, Rdim);
-    UNPROTECT(1);
+  } else {
+    char bufSTR[n][size];
+    herr_t herr = H5Aread(attr_id, mem_type_id, bufSTR );
+    char bufSTR2[n][size+1];
+    for (int i=0; i<n; i++) {
+      for (int j=0; j<size; j++) {
+        bufSTR2[i][j] = bufSTR[i][j];
+      }
+      bufSTR2[i][size] = '\0';
+    }
+
+    for (int i=0; i<n; i++) {
+      SET_STRING_ELT(Rval, i, mkChar(bufSTR2[i]));
+    }
   }
+  setAttrib(Rval, R_DimSymbol, Rdim);
+  UNPROTECT(1);
   return(Rval);
 }
 
@@ -350,23 +358,24 @@ SEXP _H5Aread( SEXP _attr_id, SEXP _buf ) {
   /***********************************************************************/
   /* create mem_space_id                                                 */
   /***********************************************************************/
-  hsize_t n = 0;
+  hsize_t n = 1;
   hid_t mem_space_id;
   SEXP Rdim;
-  if (rank > 0) {
-    n = size[0];
-    for (int i=1; i < rank; i++) {
+  for (int i=0; i < rank; i++) {
       n = n * size[i];
-    }
   }
   hsize_t dims[rank];
   for (int i=0; i<rank; i++) {
     dims[i] = size[rank-i-1];
   }
   mem_space_id = H5Screate_simple( rank, dims, dims);
-  Rdim = PROTECT(allocVector(INTSXP, rank));
-  for (int i=0; i<rank; i++) {
-    INTEGER(Rdim)[i] = dims[i];
+  if (rank > 0) {
+    Rdim = PROTECT(allocVector(INTSXP, rank));
+    for (int i=0; i<rank; i++) {
+      INTEGER(Rdim)[i] = dims[i];
+    }
+  } else {
+    Rdim = NULL_USER_OBJECT;
   }
 
   /***********************************************************************/
@@ -377,7 +386,9 @@ SEXP _H5Aread( SEXP _attr_id, SEXP _buf ) {
 
   // close mem space
   H5Sclose(mem_space_id);
-  UNPROTECT(1);
+  if (rank > 0) {
+    UNPROTECT(1);
+  }
 
   // close file space
   H5Sclose(file_space_id);
